Client request change
Requested a change to make header of "Guest" team to AWAY

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="guest">
         <div>
-          <h3 class="team">GUEST</h3>
+          <h3 class="team">AWAY</h3>
           <div>
             <h2 id="guest-team-counter">0</h2>
             <div>
