--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="home">
-        <h3 class="team">HOME</h3>
+        <h3 class="team">YOLOS</h3>
         <div>
           <h2 id="home-team-counter">0</h2>
           <div>
@@ -26,7 +26,7 @@
       </div>
       <div class="guest">
         <div>
-          <h3 class="team">AWAY</h3>
+          <h3 class="team">CHOLOS</h3>
           <div>
             <h2 id="guest-team-counter">0</h2>
             <div>
